fix tooltip on overflow hidden container

--- a/frontend/src/components/tooltip/tooltip.module.scss
+++ b/frontend/src/components/tooltip/tooltip.module.scss
@@ -1,16 +1,20 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .container,
 .skeleton {
   flex-shrink: 0;
 }
 
 .container {
-  position: relative;
-
   &:hover {
-    .tooltip {
-      opacity: 1;
-    }
-
     .body {
       opacity: 0.75;
     }
@@ -25,6 +29,7 @@
 
 .tooltip {
   position: absolute;
+  z-index: 11;
 
   padding: 10px 16px;
 
@@ -42,18 +47,5 @@
   border-radius: 4px;
   box-shadow: 0px 8px 16px 0px rgba(#000, 0.24);
 
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.25s opacity;
-}
-
-.top {
-  bottom: calc(100% + 8px);
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.bottom-end {
-  top: calc(100% + 8px);
-  right: 0;
+  animation: fadeIn 0.25s;
 }
