--- a/frontend/src/features/swap/components/balance/balance.module.scss
+++ b/frontend/src/features/swap/components/balance/balance.module.scss
@@ -1,5 +1,6 @@
 .balance {
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
 
   white-space: nowrap;
